@@ -7094,9 +7094,9 @@ string_match
   match regular expression specified by `pat'.  This function
   performs the match starting at the `nth' byte in the string
   `str' (numbered from 1).  This function returns the position in
-  bytes (numbered from 1) of the start of the match in `str'.  If
-  the match fails, the function will return -1. The exact substring
-  matched may be found using `string_match_nth'.
+  bytes (numbered from 1) of the start of the match in `str'.
+  The exact substring matched may be found using
+  `string_match_nth'.
 
  NOTES
   Positions in the string are specified using byte-offsets not
