@@ -42,4 +42,4 @@ all: run_tests run_tests_slc
 sltest: sltest.c $(SLANGLIB)/libslang.a
 	$(CC) $(CFLAGS) $(LDFLAGS) sltest.c -o sltest -I$(SLANGINC) -L$(SLANGLIB) -lslang $(OTHERLIBS)
 clean: 
-	-/bin/rm -f *~ sltest *.o *.log tmp-* log.pid* *.slc
+	-/bin/rm -f *~ sltest *.o *.log tmp-* log.pid* *.slc log.*
